[package]
name = "csgo-matchbot"
version = "0.1.4"
authors = ["MartinWienc <32913968+MartinWienc@users.noreply.github.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0"
dotenvy = "0.15"
displaydoc = "0.2"
env_logger = "0.9"
futures = "0.3"
itertools = "0.10"
log = "0.4"
once_cell = "1.14"
rand = "0.8"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json", "gzip", "brotli", "deflate"] }
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
serenity = { version = "0.11.2", default-features = false, features = ['builder', 'cache', 'client', 'framework', 'gateway', 'http', 'model', 'standard_framework', 'utils', 'rustls_backend', 'unstable_discord_api', 'collector'] }
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "macros", "migrate", "time", "tls"] }
time = "0.3"
thiserror = "1.0"
tokio = { version = "1.20", features = ["full"] }
urlencoding = "2.1"

steamid = { git = "https://github.com/JohnPeel/steamid" }
